clusters/production/apps/test/test-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-api
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-api
  template:
    metadata:
      labels:
        app: test-api
        app.kubernetes.io/name: test-api
    spec:
      containers:
        - name: test-api
          image: ghcr.io/hwinther/test/api:0.57.0
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          env:
            - name: OTEL_SERVICE_NAME
              value: "test-api"
            - name: OTEL_EXPORTER_OTLP_ENDPOINT
              value: "http://obs-otel-collector.observability-production.svc.cluster.local:4317"
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: test-api
  namespace: test
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: test-api
