clusters/production/apps/test/test-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-frontend
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-frontend
  template:
    metadata:
      labels:
        app: test-frontend
        app.kubernetes.io/name: test-frontend
    spec:
      containers:
        - name: test-frontend
          image: ghcr.io/hwinther/test/frontend:0.57.0
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          env:
            - name: PORT
              value: "8080"
            - name: SERVER_API_URL
              value: "http://test-api:8080"
            - name: PUBLIC_OTEL_EXPORTER_OTLP_TRACES_ENDPOINT
              value: "https://otel.mgmt.wsh.no/v1/traces"
            - name: PUBLIC_OTEL_SERVICE_NAME
              value: "test-frontend"
            - name: REDIS_URL
              value: "redis://redis:6379"
---
apiVersion: v1
kind: Service
metadata:
  name: test-frontend
  namespace: test
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: test-frontend
